# ros-repo-4

./: .gitignore  README.md
tangerbot/: README.md
tangerbot/Tangerbot/install/: local_setup.sh  setup.sh
tangerbot/Tangerbot/log/: latest_build
tangerbot/Tangerbot/src/: TangerbotManager.cpp
tangerbot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tangerbot/log/: latest_build
tangerbot/src/admin_gui/: CMakeLists.txt
tangerbot/src/admin_gui/src/: admin_interface.ui
tangerbot/src/aruco_package/: package.xml  setup.cfg  setup.py
tangerbot/src/aruco_package/aruco_package/: 5_camera_pose_estimation.py  broadcaster.py  calibration.py  my_tf.py
tangerbot/src/aruco_package/config/: distortion_coefficients.npy  marker.yaml  pose.yaml  robot.yaml
tangerbot/src/aruco_package/launch/: broadcast.launch.xml
tangerbot/src/gui/admin_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
tangerbot/src/gui/user_gui/: CMakeLists.txt  package.xml
tangerbot/src/gui/user_gui/include/user_gui/: battery_widget.h  circular_progressbar.h  image_button.h  recording_dialog.h  tangerine.h
tangerbot/src/gui/user_gui/src/: battery_widget.cpp  circular_progressbar.cpp  image_button.cpp  main.cpp  recording_dialog.cpp  tangerine.cpp
tangerbot/src/gui/user_gui/ui/: my_map.pgm  tangerine.ui  tangermap.xcf
tangerbot/src/llm_server/: setup.cfg  setup.py
tangerbot/src/llm_server/llm_server/: llm_server_node.py
tangerbot/src/llm_server/model/: logistic_regression_model.pkl  tfidf_vectorizer.pkl
tangerbot/src/tangerbot/: live.html
tangerbot/src/tangerbot/tangerbot_bringup/: package.xml  setup.cfg  setup.py
tangerbot/src/tangerbot/tangerbot_controller/: CMakeLists.txt
tangerbot/src/tangerbot/tangerbot_navigation/: CMakeLists.txt  (+1 more)
tangerbot/src/tangerbotController/: CMakeLists.txt  package.xml
tangerbot/src/tangerbot_controller/: CMakeLists.txt  package.xml
tangerbot/src/tangerbot_msgs/: CMakeLists.txt  package.xml
tangerbot/src/tangerbot_server/: CMakeLists.txt  package.xml
tangerbot/src/tangerbot_server/include/tangerbot_server/: brain.h  bridge.h  path_planner.h  stream.h  udp_server.h
tangerbot/src/tangerbot_server/scripts/: gesture_interpreter_node.py  llm_node.py  wav_to_topic.py
tangerbot/src/tangerbot_server/src/: brain.cpp  bridge.cpp  following_controller.cpp  path_planner.cpp  udp_client  udp_client.cpp  udp_server.cpp
tangerbot/src/vision_server/: CMakeLists.txt  package.xml  setup.py
tangerbot/src/vision_server/gesture_data/0/: seq_20250423_100520.npy  seq_20250423_100521.npy  seq_20250423_100522.npy  seq_20250423_100524.npy  seq_20250423_100527.npy  seq_20250423_100532.npy  seq_20250423_100535.npy  seq_20250423_100540.npy  seq_20250423_100542.npy  seq_20250423_100554.npy  seq_20250423_100557.npy  seq_20250423_100603.npy  seq_20250423_115855.npy  seq_20250423_115859.npy  seq_20250423_133953.npy  seq_20250423_133954.npy  seq_20250423_133955.npy  seq_20250423_133956.npy  seq_20250423_133959.npy  seq_20250423_134006.npy  seq_20250423_134009.npy  seq_20250423_134016.npy  seq_20250423_134017.npy  seq_20250423_134019.npy  seq_20250423_134020.npy  seq_20250423_134022.npy  seq_20250423_134024.npy  seq_20250423_134027.npy  seq_20250423_134028.npy  seq_20250423_134032.npy  seq_20250423_134034.npy  seq_20250423_134039.npy  seq_20250423_134046.npy  seq_20250423_134047.npy  seq_20250423_134052.npy  seq_20250423_134055.npy  seq_20250423_134057.npy  seq_20250423_134101.npy  seq_20250423_134133.npy  seq_20250423_134142.npy  (+76 more)
tangerbot/src/vision_server/gesture_data/1/: seq_20250423_100607.npy  seq_20250423_100608.npy  seq_20250423_100609.npy  seq_20250423_100610.npy  seq_20250423_100611.npy  seq_20250423_100616.npy  seq_20250423_100617.npy  seq_20250423_100618.npy  seq_20250423_100619.npy  seq_20250423_100620.npy  seq_20250423_100621.npy  seq_20250423_100624.npy  seq_20250423_100625.npy  seq_20250423_100626.npy  seq_20250423_100627.npy  seq_20250423_100628.npy  seq_20250423_100629.npy  seq_20250423_100630.npy  seq_20250423_100631.npy  seq_20250423_100632.npy  seq_20250423_100638.npy  seq_20250423_100645.npy  seq_20250423_100646.npy  seq_20250423_134113.npy  seq_20250423_134233.npy  seq_20250423_134234.npy  seq_20250423_134235.npy  seq_20250423_134236.npy  seq_20250423_134237.npy  seq_20250423_134238.npy  seq_20250423_134239.npy  seq_20250423_134240.npy  seq_20250423_134241.npy  seq_20250423_134242.npy  seq_20250423_134243.npy  seq_20250423_134244.npy  seq_20250423_134245.npy  seq_20250423_134246.npy  seq_20250423_134247.npy  seq_20250423_134248.npy  (+78 more)
tangerbot/src/vision_server/gesture_data/2/: seq_20250423_100649.npy  seq_20250423_100650.npy  seq_20250423_100651.npy  seq_20250423_100652.npy  seq_20250423_100653.npy  seq_20250423_100654.npy  seq_20250423_100655.npy  seq_20250423_100656.npy  seq_20250423_100657.npy  seq_20250423_100658.npy  seq_20250423_100659.npy  seq_20250423_100700.npy  seq_20250423_100701.npy  seq_20250423_100702.npy  seq_20250423_100706.npy  seq_20250423_100707.npy  seq_20250423_100708.npy  seq_20250423_100709.npy  seq_20250423_100710.npy  seq_20250423_100711.npy  seq_20250423_100712.npy  seq_20250423_100714.npy  seq_20250423_100715.npy  seq_20250423_100716.npy  seq_20250423_100717.npy  seq_20250423_100718.npy  seq_20250423_100719.npy  seq_20250423_100721.npy  seq_20250423_100722.npy  seq_20250423_100723.npy  seq_20250423_100724.npy  seq_20250423_100725.npy  seq_20250423_100726.npy  seq_20250423_100728.npy  seq_20250423_100729.npy  seq_20250423_100730.npy  seq_20250423_100731.npy  seq_20250423_100732.npy  seq_20250423_100733.npy  seq_20250423_100734.npy  (+62 more)
tangerbot/src/vision_server/include/vision_server/: shared_memory.hpp
tangerbot/src/vision_server/launch/: following_launch.py
tangerbot/src/vision_server/scripts/: gesture_interpreter_node.py  gesture_node.py  gesture_receive.py  human_pose.py  my_python_node.py
tangerbot/src/vision_server/src/: first_node.cpp  follower.cpp  local_map_publisher.cpp  obstacleDetector.cpp  obstacle_checker.cpp  obstacle_detector.cpp  picam_receiver.cpp  sample_common.cpp  streamer.cpp
(+519 files in other folders)
