<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tangerbot_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="taemin5315@gmail.com">tm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tangerbot_msgs</depend>

  <exec_depend>python3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>tangerbot_msgs</depend>
  </export> -->


  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>